--- a/_includes/assets/sass/styles.scss
+++ b/_includes/assets/sass/styles.scss
@@ -16,17 +16,17 @@
 /*--------------------------------------------------------------
 # OpenProps
 --------------------------------------------------------------*/
-@import "./openprops";
+@use "openprops";
 
 /*--------------------------------------------------------------
 # Variables
 --------------------------------------------------------------*/
-@import "./common/variables";
+@use "common/variables";
 
 /* --------------------------------------------------------------
 # Tools
 -------------------------------------------------------------- */
-@import "./tools/tools";
+@use "tools/tools";
 
 /*--------------------------------------------------------------
 # Normalize
@@ -36,22 +36,22 @@
 /*--------------------------------------------------------------
 # Elements
 --------------------------------------------------------------*/
-@import "./partials/elements";
+@use "partials/elements";
 
 /*--------------------------------------------------------------
 # Components
 --------------------------------------------------------------*/
-@import "./partials/components";
+@use "partials/components";
 
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
-@import "./partials/typography";
+@use "partials/typography";
 
 /*--------------------------------------------------------------
 # Layout
 --------------------------------------------------------------*/
-@import "./partials/layout";
+@use "partials/layout";
 
 /*--------------------------------------------------------------
 # Accessibility
@@ -71,4 +71,4 @@
 /*--------------------------------------------------------------
 # Navigation
 --------------------------------------------------------------*/
-@import "./partials/navigation";
+@use "partials/navigation";
