--- a/_includes/assets/sass/components/_index-list.scss
+++ b/_includes/assets/sass/components/_index-list.scss
@@ -55,9 +55,9 @@
   //   }
   // }
 
-  .divider {
-    background-color: var(--surface-2);
-  }
+  // .divider {
+  //   background-color: var(--surface-2);
+  // }
 
   .index-list__item__content {
     position: relative;
