block padding of blockquote

--- a/_includes/assets/sass/partials/_elements.scss
+++ b/_includes/assets/sass/partials/_elements.scss
@@ -152,6 +152,7 @@ a {
 blockquote {
   border-color: var(--surface-teal);
   max-inline-size: var(--size-content-3);
+  padding-block: 0;
 
   &.bq-alt{ 
     border-inline-start-width: 0;
