--- a/_includes/assets/sass/partials/_typography.scss
+++ b/_includes/assets/sass/partials/_typography.scss
@@ -101,6 +101,12 @@ h4,
 .h4-style {
   font-size: var(--font-size-fluid-01);
 }
+
+h5,
+.h5-style {
+  font-size: var(--font-size-fluid-0);
+}
+
 //   font-size: $h4-font-size-mobile;
 //   line-height: $h4-line-height-mobile;
 
@@ -227,6 +233,10 @@ h4,
     font-size: variables.$lg-body-font-size;
     line-height: variables.$lg-body-line-height;
   }
+}
+
+.tab {
+  margin-inline-start: px-to-rem.px-to-rem(36px);
 }
 
 // Colours
